flux/apps/base/kgateway-system/httproute/a2a-mcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: a2a-mcp
  namespace: kgateway-system
spec:
  parentRefs:
    - name: agentgateway
  rules:
    - matches:
        - path: { type: PathPrefix, value: /api/a2a/ }
      backendRefs:
        - name: k8s-agent-mcp-translator # The name of your new AgentgatewayBackend
          group: agentgateway.dev
          kind: AgentgatewayBackend
          port: 8083
