flux/apps/base/kgateway-system/httproute/open-web-ui.yaml
---
# HTTPRoute for browser access to Open WebUI
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: kgateway-system
  labels:
    app: agentgateway
spec:
  parentRefs:
    - name: agentgateway
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "open-webui.kubegit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Port
                value: "443"
              - name: X-Forwarded-Proto
                value: "https"
      backendRefs:
        - name: open-webui-backend
          namespace: kgateway-system
          group: agentgateway.dev
          kind: AgentgatewayBackend
---
# HTTPRoute for Open WebUI to access Ollama through gateway
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama-api
  namespace: kgateway-system
  labels:
    app: agentgateway
spec:
  parentRefs:
    - name: agentgateway
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "ollama.kubegit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ollama-backend
          namespace: kgateway-system
          group: agentgateway.dev
          kind: AgentgatewayBackend
